force-app/main/default/objects/DomicilioSalesKPI__c/DomicilioSalesKPI__c.object-meta.xml
<CustomObject>
    <description>Snapshot diario de KPI ROA por domicilio/sucursal (Facturas con Domicilio_Cliente__c), por propietario de la cuenta.</description>
    <label>Sales KPI Domicilio</label>
    <nameField>
        <label>Domicilio Sales KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales KPI Domicilios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>