force-app/main/default/objects/DomicilioSalesKPI__c/fields/ActiveCount__c.field-meta.xml
<CustomField>
    <fullName>ActiveCount__c</fullName>
    <description>Cartera activa a nivel sucursal: domicilios distintos con al menos una factura (con domicilio informado) en los últimos 3 meses.</description>
    <label>Cartera Activa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>