force-app/main/default/objects/DomicilioSalesKPI__c/fields/AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>AsOfDate__c</fullName>
    <description>Fecha de corte del snapshot (misma semántica que SalesKPI__c).</description>
    <label>Fecha de corte</label>
    <type>Date</type>
</CustomField>