force-app/main/default/objects/DomicilioSalesKPI__c/fields/ChurnedCount__c.field-meta.xml
<CustomField>
    <fullName>ChurnedCount__c</fullName>
    <description>Domicilios en cartera activa (últimos 3 meses) sin facturación en el mes calendario actual.</description>
    <label>Fuga</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>