force-app/main/default/objects/DomicilioSalesKPI__c/fields/ChurnPct__c.field-meta.xml
<CustomField>
    <fullName>ChurnPct__c</fullName>
    <description>Mismo denominador que SalesKPI__c: Churned / (Active + Churned), calculado en Apex.</description>
    <label>% Fuga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>