force-app/main/default/objects/DomicilioSalesKPI__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Nombre del mes según CreatedDate; útil para agrupar en informes (paridad con SalesKPI__c).</description>
    <formula>CASE(
    MONTH( DATEVALUE(CreatedDate) ),
    1, &quot;Enero&quot;,
    2, &quot;Febrero&quot;,
    3, &quot;Marzo&quot;,
    4, &quot;Abril&quot;,
    5, &quot;Mayo&quot;,
    6, &quot;Junio&quot;,
    7, &quot;Julio&quot;,
    8, &quot;Agosto&quot;,
    9, &quot;Septiembre&quot;,
    10, &quot;Octubre&quot;,
    11, &quot;Noviembre&quot;,
    12, &quot;Diciembre&quot;,
    &quot;N/A&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes</label>
    <type>Text</type>
</CustomField>