force-app/main/default/objects/DomicilioSalesKPI__c/fields/NewAccountCount__c.field-meta.xml
<CustomField>
    <fullName>NewAccountCount__c</fullName>
    <description>Domicilios cuya primera factura (con domicilio informado) cae en el mes actual; mismo criterio temporal que nuevos clientes en cuenta.</description>
    <label>Nuevos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>