force-app/main/default/objects/DomicilioSalesKPI__c/fields/RecoveredCount__c.field-meta.xml
<CustomField>
    <fullName>RecoveredCount__c</fullName>
    <description>Domicilios recuperados (misma ventana de elegibilidad que clientes en ChurnKPIService, aplicada por sucursal).</description>
    <label>Recuperados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>