force-app/main/default/objects/DomicilioSalesKPI__c/fields/RetainedCount__c.field-meta.xml
<CustomField>
    <fullName>RetainedCount__c</fullName>
    <description>Domicilios en cartera activa que sí facturaron en el mes calendario actual.</description>
    <label>Retención</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>