force-app/main/default/objects/DomicilioSalesKPI__c/fields/RetainedPct__c.field-meta.xml
<CustomField>
    <fullName>RetainedPct__c</fullName>
    <description>Mismo denominador que SalesKPI__c: Retained / (Active + Churned), calculado en Apex.</description>
    <label>% Retención</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>