force-app/main/default/objects/DomicilioSalesKPI__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Clave única OwnerId|fecha (as-of) para upsert idempotente del snapshot diario por domicilio.</description>
    <externalId>true</externalId>
    <label>Clave única</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>